@@ -36,6 +36,7 @@ xine-lib (1.1.3)
   * Enabled TrueSpeech codec
   * New X11 visual type: xine-lib may now use frontend's mutex/lock mechanism
     instead of XLockDisplay/XUnlockDisplay.
+  * Allow playing of OggFlac files. [bug #1590690]
 
 xine-lib (1.1.2)
   * Security fixes:
